tests/snapshots/helper_edge_cases@query.snap
---
source: tests/test_roundtrip.rs
description: "HelperEdgeCases { tricky_comma: [\"first\", \"second\", \"third\"], numbers_with_negatives: [-10, 0, 10, -5, 5], unicode_words: [\"Hello\", \"世界\", \"🌍\"] }"
---
tricky_comma=first,second,third&
numbers_with_negatives=-10|0|10|-5|5&
unicode_words=Hello+%E4%B8%96%E7%95%8C+%F0%9F%8C%8D
