tests/snapshots/internally_tagged_enum-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized
info:
  use_form_encoding: true
snapshot_kind: text
---
type=Unit
