tests/snapshots/internally_tagged_enum-4.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
type=Struct&
value=test
