tests/snapshots/internally_tagged_enum-5.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: false
snapshot_kind: text
---
type=Complex&
x=10&
y=20&
data[0]=a&
data[1]=b
