tests/snapshots/internally_tagged_enum-6.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
info:
  use_form_encoding: true
snapshot_kind: text
---
type=Complex&
x=10&
y=20&
data%5B0%5D=a&
data%5B1%5D=b
