tests/snapshots/internally_tagged_enum@form-2.snap
---
source: tests/test_roundtrip.rs
description: "Struct { value: \"test\" }"
---
type=Struct&
value=test
