tests/snapshots/internally_tagged_enum@form.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
type=Unit
