tests/snapshots/internally_tagged_enum@query-2.snap
---
source: tests/test_roundtrip.rs
expression: serialized_pretty
snapshot_kind: text
---
type=Struct&
value=test
